After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 782281 - recipe-store: Fix re-adding ingredients
recipe-store: Fix re-adding ingredients
Status: RESOLVED FIXED
Product: recipes
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Recipes maintainer(s)
Recipes maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-05-07 04:13 UTC by Mohammed Sadiq
Modified: 2017-05-07 13:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
recipe-store: Fix re-adding ingredients (1.06 KB, patch)
2017-05-07 04:13 UTC, Mohammed Sadiq
none Details | Review

Description Mohammed Sadiq 2017-05-07 04:13:36 UTC
.
Comment 1 Mohammed Sadiq 2017-05-07 04:13:43 UTC
Created attachment 351273 [details] [review]
recipe-store: Fix re-adding ingredients

The wrong variable was used to compare the ingredient name.
Comment 2 Matthias Clasen 2017-05-07 13:24:51 UTC
Thanks. I've added a few tests now...