recipe-store: Fix re-adding ingredients

The wrong variable was used to compare the ingredient name.

https://bugzilla.gnome.org/show_bug.cgi?id=782281